--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Testimonials</h1>
+	<div class="container">
+		<p>This product is amazing! I highly recommendit to anyone in need of a solutionlike this</p>
+	<p class="author"><i>- John Doe</i></p>
+	</div>
+	
+	<div class="container">
+		<p>This product is amazing! I highly recommendit to anyone in need of a solutionlike this</p>
+		<p class="author"><i>- John Doe</i></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
