--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Testimonials</h1>
+	<div class="main">
+		
 	<div class="container">
 		<p>This product is amazing! I highly recommendit to anyone in need of a solutionlike this</p>
 	<p class="author"><i>- John Doe</i></p>
@@ -17,6 +19,7 @@
 	<div class="container">
 		<p>This product is amazing! I highly recommendit to anyone in need of a solutionlike this</p>
 		<p class="author"><i>- John Doe</i></p>
+	</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
